流水线提交

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -19,8 +19,8 @@ jobs:
       cache: gradle
    - name: Build, unit tests and integration tests
      run: |
-      chmod +x gradlew
-      ./gradlew build
+      chmod +x mvn
+      ./mvn package
    - name: Code vulnerability scanning
      uses: anchore/scan-action@v3
      id: scan
