--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -2,34 +2,36 @@ name: Commit Stage
 on: push
 
 jobs:
- build:
-  name: Build and Test
-  runs-on: ubuntu-22.04
-  permissions:
-   contents: read
-   security-events: write
-  steps:
-   - name: Checkout source code
-     uses: actions/checkout@v4
-   - name: Set up JDK
-     uses: actions/setup-java@v4
-     with:
-      distribution: temurin
-      java-version: 17
-      cache: mvn
-   - name: Build, unit tests and integration tests
-     run: |
-      chmod +x mvn
-      ./mvn package
-   - name: Code vulnerability scanning
-     uses: anchore/scan-action@v3
-     id: scan
-     with:
-      path: "${{ github.workspace }}"
-      fail-build: false
-      severity-cutoff: high
-   - name: Upload vulnerability report
-     uses: github/codeql-action/upload-sarif@v3
-     if: success() || failure()
-     with:
-      sarif_file: ${{ steps.scan.outputs.sarif }}
+  build:
+    name: Build and Test
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: read
+      security-events: write
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: maven  # 修改缓存类型为 Maven
+
+      - name: Build and test with Maven
+        run: mvn clean verify  # Maven 构建命令，包含单元测试和集成测试
+
+      - name: Code vulnerability scanning
+        uses: anchore/scan-action@v3
+        id: scan
+        with:
+          path: "${{ github.workspace }}"
+          fail-build: false
+          severity-cutoff: high
+
+      - name: Upload vulnerability report
+        uses: github/codeql-action/upload-sarif@v3
+        if: success() || failure()
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
