--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,6 @@ server:
       min-spare: 5
     connection-timeout: 2s
     keep-alive-timeout: 15s
+
+polar:
+  greeting: Welcome to the local book catalog!
