--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 spring:
   application:
-    name: catalog-services
+    name: catalog-service
+  config:
+    import: "optional:configserver:"
+
+cloud:
+  config:
+    uri: http://localhost:8888
 
 server:
   port: 9001
@@ -10,6 +16,7 @@ server:
       min-spare: 5
     connection-timeout: 2s
     keep-alive-timeout: 15s
+
 
 polar:
   greeting: Welcome to the local book catalog!
