--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,28 @@ spring:
     name: catalog-service
   config:
     import: "optional:configserver:"
+  cloud:
+    config:
+      uri: http://localhost:8888
+      request-connect-timeout: 5000
+      request-read-timeout: 5000
+      fail-fast: false
+      retry:
+        max-attempts: 6
+        initial-interval: 1000
+        max-interval: 2000
+        multiplier: 1.1
+  datasource:
+    username: jiaoyuyang
+    password: haohaoxuexi
+    url: jdbc:postgresql://localhost:5432/polardb_catalog
+    hikari:
+      connection-timeout: 2000
+      maximum-pool-size: 5
+  sql:
+    init:
+      mode: always
 
-cloud:
-  config:
-    uri: http://localhost:8888
 
 server:
   port: 9001
@@ -20,3 +38,9 @@ server:
 
 polar:
   greeting: Welcome to the local book catalog!
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
