--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
