优雅关机配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: catalog-service
+  lifecycle:
+    timeout-per-shutdown-phase: 15s
   config:
     import: "optional:configserver:"
   cloud:
@@ -22,6 +24,8 @@ spring:
       connection-timeout: 2000
       maximum-pool-size: 5
 
+
+
 server:
   port: 9001
   tomcat:
@@ -30,6 +34,7 @@ server:
     threads:
       max: 50
       min-spare: 5
+  shutdown: graceful
 
 
 polar:
